JL feedback